@@ -11,7 +11,9 @@ import java.awt.event.MouseEvent;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.stream.Stream;
 
@@ -191,10 +193,10 @@ public class Gui {
             public void mouseClicked(java.awt.event.MouseEvent evt) {
                 int row = pathTable.rowAtPoint(evt.getPoint());
                 String selectedPath = (String) modelPath.getValueAt(row,0);
-                Path filePath = Path.of(selectedPath);
+                Path filePath = Paths.get(selectedPath);
                 String fileContent = null;
                 try {
-                    fileContent = Files.readString(filePath);
+                    fileContent = new String(Files.readAllBytes(filePath));
                 } catch (IOException e) {
                     prevArea.setText("Cannot read the selected file.");
                 }
@@ -212,14 +214,35 @@ public class Gui {
         addWithSpace(ruleAlignPanel, btnSelect);
 
         JFileChooser fileChooser = new JFileChooser();
+
+
+
         fileChooser.setMultiSelectionEnabled(true);
         fileChooser.setFileSelectionMode(JFileChooser.FILES_AND_DIRECTORIES);
         btnSelect.addActionListener(new ActionListener() {
             @Override
             public void actionPerformed(ActionEvent e) {
+
+                Path cachePath = null;
+                try {
+                    cachePath = Paths.get(System.getProperty("java.io.tmpdir") + "/" + BurpExtender.SEMDIR + "/" + BurpExtender.CACHEFILE);
+                    String cacheContent = new String(Files.readAllBytes(cachePath));
+                    if(!cacheContent.isEmpty()){
+                        fileChooser.setCurrentDirectory(new File(cacheContent));
+                    }
+                } catch (NoSuchFileException ex) {
+                } catch (Exception ex){
+                    throw new RuntimeException(ex);
+                }
+
                 int choice = fileChooser.showOpenDialog(multipleFileChooser);
                 if (choice == JFileChooser.APPROVE_OPTION) {
                     File[] openFiles = fileChooser.getSelectedFiles();
+
+                    try {
+                        Files.write(cachePath, fileChooser.getCurrentDirectory().getAbsoluteFile().toString().getBytes());
+                    } catch (Exception ex) {}
+
                     for(File f: openFiles){
                         if(f.isDirectory()) {
                             try {
@@ -355,7 +378,7 @@ public class Gui {
         });
 
         String[] currFields = new String[]{"And", "Response Header", "Contains", ""};
-
+        modelScope.addRow(new String[]{"And", "Response Header", "Contains", "javascript"});
         ActionListener okListener = new ActionListener() {
             @Override
             public void actionPerformed(ActionEvent e) {
@@ -486,7 +509,7 @@ public class Gui {
         addLeftAligned(pnlMain, new JLabel("The following panel reports the error logs of the current panel."));
 
 
-        outTextArea.setText("");
+        //outTextArea.setText("");
         outTextArea.setEditable(false);
 
         JScrollPane outScroll = new JScrollPane(outTextArea);
